# hdb-mlops-platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.chat  Dockerfile.chat.dockerignore  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
data/lookups/: postal_codes.csv
docs/: build-plan.md  chat-v2-agent-design.md  phase-2-design.md  roadmap-v2-online-service.md
docs/adr/: 0001-mlflow-aliases-not-stages.md  0002-sqlite-as-derived-data-store.md  0003-mcp-direct-imports-not-http.md  0004-langgraph-orchestration-over-direct-tool-loop.md  0005-multi-stage-dockerfile-with-uv.md  0006-mlflow-tracking-server-as-compose-service.md  0007-ci-workflow-and-registry-strategy.md  template.md
docs/historical/: mlflow-registry-pre-phase2-2026-06-16.sql
scripts/: build_street_town_mapping.py  csv_to_sqlite.py  migrate_artifact_paths_to_proxy.py  seed_ci_registry.py
src/data/: config.py  connection.py  queries.py
src/lookup/: __init__.py  abbreviations.py  postal.py  street_to_town.py
src/mcp_server/: __init__.py  __main__.py  config.py  formatting.py  server.py
src/mcp_server/tools/: __init__.py  lookup.py  model_info.py  predict.py  similar.py
src/serving/: app.py  config.py  logging_config.py  model_loader.py  schemas.py
src/training/: config.py  legacy_train.py  train.py
src/ui/: api_client.py  config.py  streamlit_app.py
src/ui/chat_app/: README.md  chat_agent.py  config.py  predictor.py  streamlit_app.py
src/ui/chat_app/graph/: state.py  (+3 more)
src/ui/form_app/: api_client.py  config.py  streamlit_app.py
src/ui/legacy_chat_app/: README.md  chat_agent.py  predictor.py  requirements.txt  streamlit_app.py
tests/: conftest.py
tests/data/: test_connection.py  test_queries.py
tests/lookup/: test_abbreviations.py  test_postal.py
tests/mcp_server/: test_formatting.py  test_lookup.py  test_model_info.py  test_predict.py  test_server.py  test_similar.py
tests/serving/: test_app.py  test_model_loader.py  test_schemas.py
tests/training/: test_train.py
tests/ui/: test_api_client.py  test_config.py
tests/ui/chat_app/: test_chat_agent.py  test_config.py  test_predictor.py
tests/ui/form_app/: test_api_client.py  test_config.py
(+14 files in other folders)
