[project]
name = "hdb-mlops-platform"
version = "0.1.0"
description = "MLOps platform for HDB resale price prediction"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=2.0",
    "mlflow>=2.18",
    "shap>=0.46",
    "joblib>=1.4",
    "httpx>=0.27",
    "streamlit>=1.31",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/legacy_*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "N806",  # X, X_train, X_test are conventional in sklearn/ML code
]

[tool.ruff.format]
quote-style = "double"
exclude = ["**/legacy_*.py"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["legacy_.*\\.py$"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
